# Vulkano-Engine

./: .gitignore  CMakeLists.txt  README.md  library.h  main.cpp
Core/: Clock.cpp  Clock.h  Console.h  Engine.cpp  Engine.h
Data Storage/: CacheOptimizedStorage.h  Pool.h  PoolItem.h  StorageItem.h
Rendering/: Renderer.cpp  Renderer.h  VulkanCore.cpp  VulkanCore.h  VulkanCoreStaticFunctions.cpp  VulkanCoreStructs.h  VulkanCoreUtilityFunctions.cpp  VulkanCoreUtilityFunctions.h  VulkanPlatform.h
Rendering/Utilities/: Pipeline.cpp  Pipeline.h  ShaderModule.cpp  ShaderModule.h  VulkanCoreStructs.h  VulkanCoreUtilityFunctions.cpp  VulkanCoreUtilityFunctions.h  VulkanLayerAndExtensionManager.cpp  VulkanLayerAndExtensionManager.h  VulkanLayerAndExtensionManagerDebug.cpp  VulkanLayerAndExtensionManagerDebug.h  VulkanStructs.h  VulkanUtilityFunctions.cpp  VulkanUtilityFunctions.h
Rendering/Vulkan/: VkCore.cpp  VkCore.h
Rendering/Vulkan/Classes/: RenderTargetOutput.cpp  RenderTargetOutput.h
Rendering/Vulkan/VulkanPlatforms/: VK_GLFW_PLATFORM.cpp  VK_GLFW_PLATFORM.h  VK_XCB_PLATFORM.cpp
Rendering/VulkanCore/: VulkanCoreDebugFacilities.cpp  VulkanCoreInitialization.cpp  VulkanCoreLayersAndExtensions.cpp
Rendering/VulkanPlatforms/: VK_GLFW_PLATFORM.cpp  VK_GLFW_PLATFORM.h  VK_XCB_PLATFORM.cpp  VK_XCB_PLATFORM.h  VulkanPlatform.h
Shaders/: compile.sh
Utility Classes/: Macros.h  NonCopyable.h
configs/: config.cfg
shaders/: compile.sh
src/Core/: AwaitableTask.cpp  AwaitableTask.h  Clock.cpp  Clock.h  ConfigurationLoader.cpp  ConfigurationLoader.h  Engine.cpp  Engine.h  Logger.cpp  Logger.h  SynchedTask.cpp  SynchedTask.h  ThreadWorker.cpp  ThreadWorker.h  Threadpool.cpp  Threadpool.h
src/Data Storage/: CacheOptimizedStorage.h  MemBlockAllocator.h  Pool.h  PoolItem.h  StorageItem.h
src/GameObjects/: GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
src/Rendering/: Renderer.cpp  Renderer.h
src/Rendering/Classes/: ManagedTargetOutput.cpp  ManagedTargetOutput.h  PipelineStateObjectManager.cpp  PipelineStateObjectManager.h  RenderPassManager.cpp  RenderPassManager.h  RenderpassResourceManager.cpp  RenderpassResourceManager.h  VulkanPipelineManager.cpp  VulkanPipelineManager.h  VulkanPipelineResourceManager.cpp  VulkanPipelineResourceManager.h  VulkanTargetOutput.cpp  VulkanTargetOutput.h
src/Rendering/RenderModes/: ForwardRenderMode.cpp  ForwardRenderMode.h  RenderMode.h
src/Rendering/UniformBuffers/: WVP.h
src/Rendering/Utilities/: ShaderModule.cpp  ShaderModule.h  VulkanEnums.h  VulkanStructs.h  VulkanUtilityFunctions.cpp  VulkanUtilityFunctions.h
src/Rendering/Vulkan/: Instance.cpp  Instance.h  PresentDevice.cpp  PresentDevice.h  QueueSetupStage.cpp  QueueSetupStage.h  RenderOutput.cpp  RenderOutput.h  VkCore.cpp  VkCore.h  VkUniqueHandle.cpp  VkUniqueHandle.h
src/Rendering/Vulkan/Classes/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  FenceWaiter.cpp  FenceWaiter.h  Framebuffer.cpp  Framebuffer.h  MemoryManager.cpp  MemoryManager.h  PipelineStateDescriptor.cpp  PipelineStateDescriptor.h  PipelineStateObject.cpp  PipelineStateObject.h  RenderMode.h  RenderTarget.cpp  RenderTarget.h  RenderTargetOutput.cpp  RenderTargetOutput.h  Renderpass.cpp  Renderpass.h  ResourceOperationManager.cpp  ResourceOperationManager.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  ViewportSet.h
src/Rendering/Vulkan/Classes/Buffers/: Buffer.cpp  Buffer.h  IndexedVertexBuffer.cpp  IndexedVertexBuffer.h  StagingBuffer.cpp  StagingBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/Rendering/Vulkan/Classes/Images/: Image.cpp  Image.h  Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h  StagingImage.cpp  StagingImage.h
src/Rendering/Vulkan/MemoryManagement/: BuddyAllocator.cpp  BuddyAllocator.h  IMemBlockAllocator.h  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h
src/Rendering/Vulkan/VulkanPlatforms/: FunctionWrapper.h  VK_GLFW_PLATFORM.cpp  VK_GLFW_PLATFORM.h  VK_XCB_PLATFORM.h  VulkanPlatform.h  WindowHandleWrapper.h
src/Rendering/VulkanCore/: VulkanCoreDebugFacilities.cpp  VulkanCoreInitialization.cpp
src/Shaders/: shader.vert
src/Utility Classes/: NonCopyable.h  NonCopyableNonMovable.h  NonMovable.h  Nullable.h  ThreadedResourceSet.h
